refactor: 리뷰 반영 - 예약 페이지 랜더링 메서드(GET) - 중복 검증 로직 삭제 - 테스트1-2단계용 임시 데이터셋 제거